--- a/app/views/hooks/gitdownload/_view_repositories_show_contextual.erb
+++ b/app/views/hooks/gitdownload/_view_repositories_show_contextual.erb
@@ -1,6 +1,6 @@
 <% if User.current.allowed_to?(:commit_access, @project) %>
 	<div id="git-icon"></div>
-	
+		
 	<script type="text/javascript">
 		
 		GITDOWNLOAD_CONTROLLER = '<%= Setting.protocol.downcase %>://<%= Setting.host_name %>/gitdownload';
@@ -37,7 +37,7 @@
 		</div>
 		<div class="right">
 			<h3><%= l(:label_download_format) %></h3>
-			<%= select_tag :gitFormat, options_for_select(['tar.gz','tar.bz2','zip']), :id => 'gitFormat' %>
+			<%= select_tag :gitFormat, options_for_select(['tar.gz','tar.bz2','zip']), :id => 'git-format' %>
 			<input id="gitType" type="hidden" value="all">
 		</div>
 		<% if Setting.plugin_gitdownload["git_show_revs"]  == 'on' %>
