--- a/app/views/repositories/_form.html.erb
+++ b/app/views/repositories/_form.html.erb
@@ -22,7 +22,7 @@
 <% unless @repository.identifier_frozen? %>
   <em class="info">
     <%= l(:text_length_between, :min => 1, :max => Repository::IDENTIFIER_MAX_LENGTH) %> <%= l(:text_repository_identifier_info).html_safe %>
-    <span id="gitdownload-info">
+    <span id="gitdownload-info" class="gitdownload-info">
         Changing "<%= l(:field_path_to_repository) %>" will break git-http-backend authentication
     </span>
   </em>
