--- a/app/views/hooks/gitdownload/_view_projects_show_right.erb
+++ b/app/views/hooks/gitdownload/_view_projects_show_right.erb
@@ -1,4 +1,6 @@
-<% if User.current.allowed_to?(:commit_access, @project) %>
+<!--FIXME: workaround for User.current is anonymous-->
+<!--% if User.current.allowed_to?(:commit_access, @project) %-->
+<% if true %>
 	<div class="git box">
 
         <script type="text/javascript">
