[feat] hide remote-repo-related settings when creating repo

--- a/app/views/repositories/_form.html.erb
+++ b/app/views/repositories/_form.html.erb
@@ -14,22 +14,25 @@
 
 
 
-
-<% if Setting.plugin_gitdownload["git_auto_create_repo"] == 'on' &&  params[:action] != 'edit' %>
-    <p id="create_repo"><%= f.check_box :create_repo, :label => :field_repository_create, :checked => true %></p>
-<% else %>
-    <p id="create_repo"><%= f.check_box :create_repo, :label => :field_repository_create %></p>    
+<% if Setting.plugin_gitdownload["git_repo_is_remote"] == 'on' %>
+    <% if Setting.plugin_gitdownload["git_auto_create_repo"] == 'on' &&  params[:action] != 'edit' %>
+        <p id="create_repo"><%= f.check_box :create_repo, :label => :field_repository_create, :checked => true %></p>
+    <% else %>
+        <p id="create_repo"><%= f.check_box :create_repo, :label => :field_repository_create %></p>
+    <% end %>
 <% end %>
 
 <p>
-    
+
 <%= f.text_field :identifier, :disabled => @repository.identifier_frozen?, :required => true %>
 <% unless @repository.identifier_frozen? %>
   <em class="info">
     <%= l(:text_length_between, :min => 1, :max => Repository::IDENTIFIER_MAX_LENGTH) %> <%= l(:text_repository_identifier_info).html_safe %>
-    <span id="gitdownload-info" class="gitdownload-info">
-        Changing "<%= l(:field_path_to_repository) %>" will break git-http-backend authentication
-    </span>
+      <% if Setting.plugin_gitdownload["git_repo_is_remote"] == 'on' %>
+        <span id="gitdownload-info" class="gitdownload-info">
+            Changing "<%= l(:field_path_to_repository) %>" will break git-http-backend authentication
+        </span>
+      <% end %>
   </em>
 <% end %>
 </p>
@@ -42,21 +45,23 @@
 </div>
 
 
-<% if params[:action] != 'edit' %>
-    <script type="text/javascript">
+<% if Setting.plugin_gitdownload["git_repo_is_remote"] == 'on' %>
+    <% if params[:action] != 'edit' %>
+        <script type="text/javascript">
+
+            var path = "<%= Setting.plugin_gitdownload["git_repo_create_path"] %>/<%= @project.identifier %>.";
+            var path = path.replace('//', '/');
+            var suffix = ".git";
         
-        var path = "<%= Setting.plugin_gitdownload["git_repo_create_path"] %>/<%= @project.identifier %>.";
-        var path = path.replace('//', '/');
-        var suffix = ".git";
-    
-        $('#repository_identifier').on('keyup', function() {
-            $('#repository_url').val(path + $(this).val() + suffix);
-        });
-        
-        if($('#repository_url').val() == '') {
-            $('#repository_url').val(path + '<REPO IDENTIFIER>' + suffix);
-        }
-    </script>
+            $('#repository_identifier').on('keyup', function() {
+                $('#repository_url').val(path + $(this).val() + suffix);
+            });
+
+            if($('#repository_url').val() == '') {
+                $('#repository_url').val(path + '<REPO IDENTIFIER>' + suffix);
+            }
+        </script>
+    <% end %>
 <% end %>
 
 <p>
